styles.css
#container {
	margin-top: 50px;
	margin-left: 250px;
	margin-right: 250px;
	padding: 30px;
	border-radius: 15px;
}

h1 {
	text-align: center;
}

.leadp {
	text-indent: 2.5em;
}

h2{
	text-align: center;
}

#buttonWrapper {
	text-align: center;
}

.btn-group{
	margin: 0 auto;
	text-align: center;
	width: inherit;
	display: inline-block;
}

.color {
	color: white;
}

body{
	background-image: url('images/Cabin2.JPG');
	background-size: cover;
}

